# tracelink

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.npm.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml
cli/: tracelink.mjs
dashboard/: index.html
docs/: architecture.md  architecture.zh-CN.md  testing.md  testing.zh-CN.md  usage.md  usage.zh-CN.md
examples/ai-agent/: README.md  README.zh-CN.md  agent.mjs  agent.py
protocol/: CONFORMANCE.md  sanitize.ts  types.ts  version.ts
protocol/fixtures/: README.md  blocked-outcome.ndjson  nested-span.ndjson  plain-call.ndjson  span-duration.ndjson
protocol/schema/: scope-policy.schema.json  trace-log.schema.json
receiver/hosts/http/: index.ts
receiver/hosts/vite/: index.ts  plugin.ts  types.ts
receiver/service/: handler.ts
receiver/tests/: http-receiver.test.ts
scripts/: embed-dashboard.mjs  pack-readme.mjs  verify-js-package.mjs  verify-python-package.mjs
sdks/javascript/src/: index.ts
sdks/javascript/src/engine/: context.ts  sanitize.ts  scope.ts  time.ts  tracer.ts  types.ts
sdks/python/: CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
sdks/python/src/tracelink/: __init__.py
sdks/python/src/tracelink/engine/: __init__.py  sanitize.py  time.py  tracer.py  types.py
sdks/python/src/tracelink/extensions/: __init__.py
sdks/python/src/tracelink/extensions/frameworks/: __init__.py  fastapi.py
sdks/python/src/tracelink/extensions/instrumentations/: __init__.py
sdks/python/src/tracelink/runtime/: __init__.py  context.py
sdks/python/src/tracelink/transport/: __init__.py
sdks/python/src/tracelink/transport/control/: __init__.py  scope_sync.py
sdks/python/src/tracelink/transport/exporters/: __init__.py  file.py  http.py  paths.py
sdks/python/src/tracelink/transport/propagators/: __init__.py  http.py
sdks/python/tests/: test_conformance_fixtures.py  test_exporters.py  test_middleware.py  test_optional_import.py  test_propagators.py  test_tracer.py
skills/tracelink/: SKILL.md
skills/tracelink/references/: api.md  dashboard.md  sdk.md  wire-schema.md
(+17 files in other folders)
